<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.RunFragment"
    android:background="@color/colorBgRegLog">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:id="@+id/register_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_reg_log_padding"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/register_error_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextStyle"
                    android:inputType="textEmailAddress"
                    android:hint="@string/register_email"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/register_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextStyle"
                    android:inputType="text"
                    android:hint="@string/register_first_name"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/register_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextStyle"
                    android:inputType="text"
                    android:hint="@string/register_last_name"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/register_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextStyle"
                    android:inputType="textPassword"
                    android:hint="@string/register_pass"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/register_pass_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextStyle"
                    android:inputType="textPassword"
                    android:hint="@string/register_pass_repeat"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_btn"
                    android:textColor="@color/colorRegBtnText"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:backgroundTint="@color/btn_log_reg_color"
                    android:layout_marginTop="@dimen/register_btn_margin_top" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/register_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_change_screen_height"
                android:clickable="true"
                android:text="@string/register_btn_login"/>
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/login_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_reg_log_padding"
        android:orientation="vertical"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/login_error_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextStyle"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_email"/>
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextStyle"
                    android:inputType="textPassword"
                    android:hint="@string/login_pass"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_btn"
                    android:textColor="@color/colorRegBtnText"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:backgroundTint="@color/btn_log_reg_color"
                    android:layout_marginTop="@dimen/register_btn_margin_top"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/login_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_change_screen_height"
                android:text="@string/login_btn_register" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

